nullaway_error_e02328a0-0fb9-4837-855d-eee0ebf720d0.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileLayer.java:116: error: [NullAway] dereferenced expression this.data is @Nullable
    return this.data.getTiles();
                    ^
    (see http://t.uber.com/nullaway )
